--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,88 +2,77 @@
 <html lang="en">
   <head>
 
-      
-  
-
     <!-- Meta Information -->
     <title>gitBytes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    
+    <!-- Server CSS -->
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   
     <!-- External JS -->
-    <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     
     <!-- Server JS -->
-    <script type="text/javascript" src="/server.js"></script>
+    
 
   </head>
 
-  <body>
-
-    <!-- Page-specific (main) content here -->
-    <main>
-
-        <section>
-          
-          <div class="jumbotron">
-            
+    <header>
+   
+          <div class="jumbotron">  
             <h1>gitBytes</h1>
-            <p>"cheesy one liner here"</p> 
-            
+            <p><em>est.2019</em></p>    
           </div>
 
-        </section> 
+    </header> 
+  
+    <body>
 
         <section id="carousel">
-
-         <!--random food image carousel here-->
-
          <div class="container">
-            <h2>Carousel Example</h2>  
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
-              <!-- Indicators -->
-              <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-              </ol>
-          
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="/images/donuts1.png" alt="donuts1" style="width:100%;">
+                  <img src="https://www.motherjones.com/wp-content/uploads/coffeepour.jpg?w=990" alt="coffee">
                 </div>
                 
-                
-          
                 <div class="item">
-                  <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+                  <img src="https://www.kitsilano.ca/wp-content/uploads/2017/05/Cartems-menu-donuts.jpg" alt="donuts">
                 </div>
               
                 <div class="item">
-                  <img src="ny.jpg" alt="New york" style="width:100%;">
+                  <img src="https://www.macleans.ca/wp-content/uploads/2018/11/BAIT-ELECTRONICS-TANNER-NOV1-810x445.jpg" alt="meme">
                 </div>
               </div>
-
         </section>
         
-        <section>
 
-            <form method="GET" action="./gitbytes">
-
-            <button type="submit" class="btn btn-dark">ORDER NOW</button>
-
-            </form>
-
-        </section>
 
         </main>
 
   </body>
+
+  <footer class="footer">
+
+      <section class="order-button">
+
+          <form method="GET" action="/gitbytes">
+
+          <button type="submit" class="btn btn-dark">ORDER NOW</button>
+
+          </form>
+
+      </section>
+
+
+  </footer>
 
 </html>
