add css and routes

--- a/views/gitbytes.ejs
+++ b/views/gitbytes.ejs
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:700" rel="stylesheet">
+
 
     <!-- Server CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -35,20 +38,19 @@
   <body>
     <main class="container">
         <section class="menu-items">
-            <h3>Coffee < br /> && Donuts </h3>
-            <h4><em>"key-value pair your coffee with your favourite donuts"</em></h4>
+            <h2 class="restaurant-name">Coffee < br /> && Donuts </h2>
+            <h4 class="slogan"><em>"key-value pair your coffee with your favourite donuts"</em></h4>
             <h5>MENU</h5>
 
-            <ul>
-                <li><!---Append items selected from Menu--></li>
-                <li><!---Append items selected from Menu--></li>
-                <li><!---Append items selected from Menu--></li>
-                <li><!---Append items selected from Menu--></li>
-                <li><!---Append items selected from Menu--></li>
-                <li><!---Append items selected from Menu--></li>
-                <li><!---Append items selected from Menu--></li>
-                <li><!---Append items selected from Menu--></li>
-                <li><!---Append items selected from Menu--></li>
+            <ul class="menu-list" style="list-style-type:none;">
+                <li>item 1</li>
+                <li>item 2</li>
+                <li>item 3</li>
+                <li>item 4</li>
+                <li>item 5</li>
+                <li>item 6</li>
+                <li>item 7</li>
+                <li>item 8</li>
             </ul>
 
             <form method="POST" action="/gitbytes"></form>
@@ -56,15 +58,15 @@
         </section>
            
         <section class="item-cart">
-            <h6>ORDER LIST</h6>
+            <h2>ORDER LIST</h2>
 
-                <ul>
-                  <li><!---Append items selected from Menu--></li>
-                  <li><!---Append items selected from Menu--></li>
-                  <li><!---Append items selected from Menu--></li>
+                <ul style="list-style-type:none;">
+                  <li>item 1</li>
+                  <li>item 2</li>
+                  <li>item 3</li>
                 </ul>
 
-                <form method="GET" action="/confirmation">
+                <form class="confirm-button" method="GET" action="/confirmation">
 
                 <button type="submit" class="btn btn-dark">CONFIRM</button>
       
@@ -75,6 +77,15 @@
   </body>
 
   <footer class="footer">
+
+      <span class="icons">
+
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook"></i>
+          
+
+      </span>
 
   </footer>
 
