--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -11,6 +11,9 @@
       <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
       <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Inconsolata:700" rel="stylesheet">
+
       
       <!-- Server CSS -->
       <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -37,7 +40,7 @@
     
   <section class="confirmation-container">
 
-    <h3>CONFIRMATION</h3>
+    <h3 class="confirmation">CONFIRMATION</h3>
 
   </section>
 
@@ -45,6 +48,14 @@
 </body>
 
 <footer class="footer">
+
+    <span class="icons">
+
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-facebook"></i>
+
+    </span>
 
 </footer>
 
