--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     
     <!-- Server CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -20,6 +21,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     
     <!-- Server JS -->
+    <script type="text/javascript" src="/server.js"></script>
     
 
   </head>
@@ -29,32 +31,35 @@
           <div class="jumbotron">  
             <h1>gitBytes</h1>
             <p><em>est.2019</em></p>    
+
+            <form method="GET" action="/gitbytes" class="order-button">
+  
+              <button type="submit" class="btn btn-dark">ORDER NOW</button>
+    
+            </form>
+
           </div>
 
     </header> 
   
     <body>
 
-        <section id="carousel">
-         <div class="container">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <section>
+            <div id="myCarousel" class="carousel-slide" data-ride="carousel">
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="https://www.motherjones.com/wp-content/uploads/coffeepour.jpg?w=990" alt="coffee">
+                  <img class="img-fluid" src="/images/coffeepour.jpg" alt="coffee">
                 </div>
                 
                 <div class="item">
-                  <img src="https://www.kitsilano.ca/wp-content/uploads/2017/05/Cartems-menu-donuts.jpg" alt="donuts">
+                  <img class="img-fluid" src="/images/Cartems-menu-donuts.jpg" alt="donuts">
                 </div>
               
                 <div class="item">
-                  <img src="https://www.macleans.ca/wp-content/uploads/2018/11/BAIT-ELECTRONICS-TANNER-NOV1-810x445.jpg" alt="meme">
+                  <img class="img-fluid" src="/images/coffeelaptop.jpg" alt="meme">
                 </div>
-              </div>
         </section>
-        
-
 
         </main>
 
@@ -62,17 +67,13 @@
 
   <footer class="footer">
 
-      <section class="order-button">
+      <span class="icons">
 
-          <form method="GET" action="/gitbytes">
-
-          <button type="submit" class="btn btn-dark">ORDER NOW</button>
-
-          </form>
-
-      </section>
-
-
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook"></i>
+  
+      </span>
   </footer>
 
 </html>
