update name and phone fields

--- a/views/gitbytes.ejs
+++ b/views/gitbytes.ejs
@@ -68,6 +68,9 @@
 
                 <form class="confirm-button" method="GET" action="/confirmation">
 
+                    <input type="text" placeholder="Name" name="name">
+                    <input type="text" placeholder="Phone Number" name="phone">
+
                 <button type="submit" class="btn btn-dark">CONFIRM</button>
       
                 </form>
