menu lookup from database rendered to /gitbytes

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -23,6 +23,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       <!-- Server JS -->
+      <script type="text/javascript" src="/scripts/app.js"></script>
 
 </head>
 
