--- a/views/gitbytes.ejs
+++ b/views/gitbytes.ejs
@@ -18,12 +18,11 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   
     <!-- External JS -->
-    <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     
     <!-- Server JS -->
-
+    <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
   <header>
@@ -43,14 +42,13 @@
             <h5>MENU</h5>
 
             <ul class="menu-list" style="list-style-type:none;">
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
-                <li>item 4</li>
-                <li>item 5</li>
-                <li>item 6</li>
-                <li>item 7</li>
-                <li>item 8</li>
+            <% menus.forEach(function(item) { %>
+                <li>
+                    <div>
+                        <a class="item"><%= item.item_name %></a><a><%= item.price %></a>
+                    </div>
+                </li>
+            <% }) %>
             </ul>
 
             <form method="POST" action="/gitbytes"></form>
