--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
 
+    <!-- Meta Information -->
+    <title>gitBytes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+
+    <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    
+    <!-- Server CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  
+    <!-- External JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    
+    <!-- Server JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    
+
   </head>
 
-  <body>
-    <h1>Hello World!</h1>
+    <header>
+   
+          <div class="jumbotron">  
+            <h1>gitBytes</h1>
+            <p><em>est.2019</em></p>    
+
+            <form method="GET" action="/gitbytes" class="order-button">
+  
+              <button type="submit" class="btn btn-dark">ORDER NOW</button>
+    
+            </form>
+
+          </div>
+
+    </header> 
+  
+    <body>
+
+        <section>
+            <div id="myCarousel" class="carousel-slide" data-ride="carousel">
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="item active">
+                  <img class="img-fluid" src="/images/coffeepour.jpg" alt="coffee">
+                </div>
+                
+                <div class="item">
+                  <img class="img-fluid" src="/images/Cartems-menu-donuts.jpg" alt="donuts">
+                </div>
+              
+                <div class="item">
+                  <img class="img-fluid" src="/images/coffeelaptop.jpg" alt="meme">
+                </div>
+        </section>
+
+        </main>
+
   </body>
+
+  <footer class="footer">
+
+      <span class="icons">
+
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook"></i>
+  
+      </span>
+  </footer>
+
 </html>
