footer on each view, body background, name-phone field classes, carousel resize

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,6 +74,9 @@
           <i class="fab fa-facebook"></i>
   
       </span>
+
+      <p>&copy; gitBytes</p> <p>Brayden, Rocky && Tim</p>
+
   </footer>
 
 </html>
