--- a/views/gitbytes.ejs
+++ b/views/gitbytes.ejs
@@ -68,8 +68,8 @@
 
                 <form class="confirm-button" method="GET" action="/confirmation">
 
-                    <input type="text" placeholder="Name" name="name">
-                    <input type="text" placeholder="Phone Number" name="phone">
+                    <input type="text" class="name-field" placeholder="Name" name="name">
+                    <input type="text" class="phone-field" placeholder="Phone Number" name="phone">
 
                 <button type="submit" class="btn btn-dark">CONFIRM</button>
       
@@ -89,6 +89,8 @@
           
 
       </span>
+
+      <p>&copy; gitBytes</p> <p>Brayden, Rocky && Tim</p>
 
   </footer>
 
