--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -58,7 +58,7 @@
 
     </span>
 
-    <p>&copy; gitBytes</p> <p>Brayden, Rocky && Tim</p>
+    <p>&copy; gitBytes</p> <p>Brayden, Jatinder && Tim</p>
 
 </footer>
 
