--- a/views/gitbytes.ejs
+++ b/views/gitbytes.ejs
@@ -90,7 +90,7 @@
 
       </span>
 
-      <p>&copy; gitBytes</p> <p>Brayden, Rocky && Tim</p>
+      <p>&copy; gitBytes</p> <p>Brayden, Jatinder && Tim</p>
 
   </footer>
 
