--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
   
       </span>
 
-      <p>&copy; gitBytes</p> <p>Brayden, Rocky && Tim</p>
+      <p>&copy; gitBytes</p> <p>Brayden, Jatinder && Tim</p>
 
   </footer>
 
