radded new class price, right align on menu container

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -1,5 +1,7 @@
 <!doctype html>
 
+<!doctype html>
+
 <html lang="en">
 <head>
       <!-- Meta Information -->
@@ -57,6 +59,8 @@
         <i class="fab fa-facebook"></i>
 
     </span>
+
+    <p>&copy; gitBytes</p> <p>Brayden, Jatinder && Tim</p>
 
 </footer>
 
