--- a/views/gitbytes.ejs
+++ b/views/gitbytes.ejs
@@ -45,7 +45,8 @@
             <% menus.forEach(function(item) { %>
                 <li>
                     <div>
-                        <a class="item"><%= item.item_name %></a><a><%= item.price %></a>
+                        <a class="item"><%= item.item_name %></a>
+                        <a class="price"><%= item.price %></a>
                     </div>
                 </li>
             <% }) %>
@@ -86,6 +87,8 @@
           
 
       </span>
+
+      <p>&copy; gitBytes</p> <p>Brayden, Jatinder && Tim</p>
 
   </footer>
 
