--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,6 +74,7 @@
           <i class="fab fa-facebook"></i>
   
       </span>
-  </footer>
 
-</html>
+      <p>&copy; gitBytes</p> <p>Brayden, Jatinder && Tim</p>
+
+  </footer>
