final mvp update

--- a/views/gitbytes.ejs
+++ b/views/gitbytes.ejs
@@ -65,8 +65,8 @@
 
                 <form class="confirm-button" method="POST" action="/gitbytes">
 
-                    <input type="text" placeholder="Name" name="name">
-                    <input type="text" value='+1'  placeholder="4033455678" name="phone">
+                    <input type="text" class="name-field" placeholder="Name" name="name">
+                    <input type="text" class="phone-field" value='+1'  placeholder="4033455678" name="phone">
 
                     <input type="text" hidden name="smsStr" id="smsStr">
 
