--- a/views/orderstatus.ejs
+++ b/views/orderstatus.ejs
@@ -43,10 +43,8 @@
     
   <section class="confirmation-container" >
 
-    <h3 class="confirmation" id = 'confirmation' name='confirmation'>order sent!</h3>
-    <form method='post' action= '/confirmation'>
-    <button class= 'order-status' type="submit" >go to order status</button>
-  </form>
+    <h3 class="confirmation" id = 'confirmation' name='confirmation'>Your order will be ready in 20 min</h3>
+
   </section>
 
   </main>
