branch for merging master

--- a/views/orderstatus.ejs
+++ b/views/orderstatus.ejs
@@ -44,7 +44,7 @@
   <section class="confirmation-container" >
 
     <h3 class="confirmation" id = 'confirmation' name='confirmation'>Your order will be ready in 20 min</h3>
-
+    <a href='/'>Go home</a>
   </section>
 
   </main>
